--- a/src/FWO.EventSourcing.CosmosDB/FWO.EventSourcing.CosmosDB.csproj
+++ b/src/FWO.EventSourcing.CosmosDB/FWO.EventSourcing.CosmosDB.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FWO.EventSourcing.Core\FWO.EventSourcing.Core.csproj" />
+  </ItemGroup>
+
 </Project>
